--- a/styles/style.css
+++ b/styles/style.css
@@ -306,19 +306,19 @@ footer p {
 }
 
 .btn-copiar {
-    width: 50%;
+    width: 80%;
     height: 35px;
     border-radius: 24px;
     background: white;
     color: #0A3871;
     font-weight: bold;
     border: solid 1px #0A3871;
-    margin: 15px 20px;
+    margin: 0 10%;
     border-style: solid;
     font-size: 14px;
     font-family: "Montserrat", sans-serif;
-    position: absolute;
-    bottom: 3%;
+    position: relative;
+    top: 35%;
     padding: 5px;
 
 
